[package]
name = "microbit-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armv6-m = { path = "../microbit-vm/lib/armv6-m" }
elfy = "0.2.2"
clap = { version = "4.1.4", features = ["derive"] }
ihex = "3.0.0"
hex = "0.4.3"
